# PLC-Guarded-Per-Cycle-Speed-Supervisor-for-a-UR5e-Palletising-Cell

./: .gitignore  winner_table.tex  winner_tableBayesReal50.tex  winner_tableBayesSim50.tex  winner_tableBayessim_3.377simkg.tex  winner_tablePPOsim_3.377simkg.tex  winner_tableRule.tex  winner_tableRulesim_3.377simkg.tex
opcua_mock_plc/: client.py  server.py  server_rebuild.py
ros2_ws/src/opcua_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/opcua_bridge/opcua_bridge/: bridge_node.py
ros2_ws/src/ur5e_cell_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5e_cell_bringup/config/: controllers.yaml
ros2_ws/src/ur5e_cell_bringup/launch/: bringup_fake.launch.py  gazebo_world.launch.py  supervised_cycles.launch.py  supervised_cycles_real.launch.py
ros2_ws/src/ur5e_cell_bringup/ur5e_cell_bringup/: bayes_supervisor_node.py  cycle_logger_node.py  cycle_signals_node.py  cycle_signals_node_rewrite.py  moveit_speed_executor_node.py  node_template.py  ppo_speed_supervisor_node.py  rule_based_supervisor_node.py  sim_torque_estimator_node.py  speed_supervisor_node.py
ros2_ws/src/ur5e_cell_bringup/worlds/: ur5e_cell.world
ros2_ws/src/ur5e_cell_description/: CMakeLists.txt  package.xml
ros2_ws/src/ur5e_cell_description/urdf/: ur5e_cell.urdf.xacro  ur5e_cell_gazebo.urdf.xacro  ur5e_cell_macro.xacro
ros2_ws/src/ur5e_cell_description/xacro/: ur5e_cell.urdf.xacro
ros2_ws/src/ur5e_cell_moveit_config/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5e_cell_moveit_config/config/: controllers.yaml  controllers_real.yaml  joint_limits.yaml  kinematics.yaml  ur5e_cell.srdf
ros2_ws/src/ur5e_cell_moveit_config/launch/: gazebo_moveit.launch.py  move_group.launch.py  move_group_real.launch.py  rviz.launch.py
tools/: extract_plot.py  offline_analysis.py  plot_creater.py  winner_extractor.py
uaexpert/: CHANGELOG.txt
