<?xml version="1.0"?>
<package format="3">
  <name>ur5e_cell_description</name>
  <version>0.0.1</version>
  <description>UR5e cell geometry (pedestal + UR + simple gripper + tcp_link)</description>
  <maintainer email="you@example.com">Chathu</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
